--- a/bob-js-client/query.html
+++ b/bob-js-client/query.html
@@ -21,10 +21,10 @@
         <!-- Include all compiled plugins (below), or include individual files as needed -->
         <script src="js/bootstrap.min.js"></script>
         <script>
-            $(function () {
-                $("#footer").load("footer.html");
-            });
-        </script>
+			$(function() {
+				$("#banner").load("banner.html");
+			});
+		</script>
     </head>
     <body>
         <script>
@@ -102,14 +102,8 @@
         <div class="container">
             <div class="row row-centered">
 
-                <div class="col-xs-6 col-centered">
+                <div id="banner"></div>
 
-                    <center style="margin-bottom: 40px">
-                        <a href="index.html"><img src="img/beacon.png" height="150" border="0"/></a>
-                        <h4 style="margin-bottom: 0px">Global Alliance for Genomics and Health</h4>
-                        <h3 style="margin-top: 2px">Beacon of Beacons</h3>
-                    </center>
-                </div>
             </div>
             <div class="row row-centered">
                 <div class="col-xs-6 col-centered">
@@ -175,9 +169,6 @@
                 document.getElementById("results").innerHTML = "<center><img height='30' src='img/wait.gif'</center>";
             }
         </script>
-
-        <div id="footer">
-        </div>
 
         <script>
             (function (i, s, o, g, r, a, m) {
