--- a/bob-js-client/query.html
+++ b/bob-js-client/query.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Global Alliance for Genomics and Health - Beacon of Beacons</title>
+        <title>Global Alliance for Genomics and Health - BRCA Beacon of Beacons</title>
 
         <!-- Bootstrap -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
