Added host and aggregation information to query output

--- a/bob-js-client/brca-query.html
+++ b/bob-js-client/brca-query.html
@@ -22,7 +22,7 @@
         <script src="js/bootstrap.min.js"></script>
         <script>
 			$(function() {
-				$("#banner").load("banner.html");
+				$("#banner").load("banner-brca.html");
 			});
 		</script>
     </head>
