--- a/bob-js-client/brca.html
+++ b/bob-js-client/brca.html
@@ -71,7 +71,7 @@
                 <div class="col-xs-6 col-centered wide-container">
                     <div id="banner"></div>
 
-                    <form class="form-horizontal" action="query.html">
+                    <form class="form-horizontal" action="brca-query.html">
                         <div class="form-group">
                             <label for="beacon" class="control-label col-xs-3">Beacon</label>
                             <div class="col-xs-9" id="beaconlist">
