--- a/bob-js-client/brca-query.html
+++ b/bob-js-client/brca-query.html
@@ -61,8 +61,9 @@
                         obj = JSON.parse(xmlhttp.responseText);
                         var arrayLength = obj.length;
                         var resultTable = "";
-                        resultTable += "<center><table><tr><th>Beacon</th><th>Result</th></tr>";
-
+                        //resultTable += "<center><table><tr><th>Beacon</th><th>Result</th></tr>";
+                        resultTable += "<center><table><tr><th></th><th>Beacon</th></tr>";
+                        
                         for (var i = 0; i < arrayLength; i++) {
                             var response = obj[i].response;
                             var responseIndicator = "";
@@ -82,7 +83,8 @@
 								aggString = " [aggregator]";
 							}
 
-                            resultTable += "<tr><td>" + obj[i].beacon.name + " (" + obj[i].beacon.organization + ")" + aggString + "</td><td>" + responseIndicator + "</td></tr>";
+ 							//resultTable += "<tr><td>" + obj[i].beacon.name + " (" + obj[i].beacon.organization + ")" + aggString + "</td><td>" + responseIndicator + "</td></tr>";
+                            resultTable += "<tr><td>" + responseIndicator + "</td><td>" + obj[i].beacon.name + " (" + obj[i].beacon.organization + ")" + aggString + "</td></tr>";
                         }
                         resultTable += "</table></center>";
 
