Added video link to banners

--- a/bob-js-client/banner.html
+++ b/bob-js-client/banner.html
@@ -5,7 +5,8 @@
 	<h3 style="margin-top: 2px">Beacon of Beacons</h3>
 	<div style="font-size: 11px;">
 		<center>
-			<a href="index.html">Query</a>&nbsp;&nbsp;
+			<a href="http://youtu.be/sNQzAmfi7xI" target="_blank">What's a beacon?</a>&nbsp;&nbsp;
+			<a href="index.html">Query BoB</a>&nbsp;&nbsp;
 			<a href="subscribe.html">Subscribe new beacon</a>&nbsp;&nbsp;
 			<a href="https://github.com/mcupak/beacon-of-beacons#beacon-of-beacons" target="_blank">Documentation</a>&nbsp;&nbsp;
 			<a href="https://github.com/mcupak/beacon-of-beacons" target="_blank">Source code</a>&nbsp;&nbsp;
