--- a/bob-js-client/query.html
+++ b/bob-js-client/query.html
@@ -62,7 +62,9 @@
                         var arrayLength = obj.length;
                         var resultTable = "";
                         //resultTable += "<center><table><tr><th>Beacon</th><th>Result</th></tr>";
-                        resultTable += "<center><table><tr><th></th><th>Beacon</th></tr>";
+                        resultTable += "<center><table>";
+                        
+                        var rows = "";
 
                         for (var i = 0; i < arrayLength; i++) {
                             var response = obj[i].response;
@@ -83,9 +85,16 @@
                                 aggString = " [aggregator]";
                             }
 
-                            //resultTable += "<tr><td>" + obj[i].beacon.name + " (" + obj[i].beacon.organization + ")" + aggString + "</td><td>" + responseIndicator + "</td></tr>";
-                            resultTable += "<tr><td>" + responseIndicator + "</td><td>" + obj[i].beacon.name + " (" + obj[i].beacon.organization + ")" + aggString + "</td></tr>";
+							if (obj[i].beacon.name == "Beacon of Beacons") {
+								var line = "<tr style=\"padding-bottom: 10em;\"><td>" + responseIndicator + "</td><td><b>" + obj[i].beacon.name + " (" + obj[i].beacon.organization + ")</b></td></tr>";							
+								rows = line + rows; // prepend
+							} else {
+								var line = "<tr><td>" + responseIndicator + "</td><td>" + obj[i].beacon.name + " (" + obj[i].beacon.organization + ")" + aggString + "</td></tr>";
+								rows += line; // append
+							}
                         }
+                        
+                        resultTable += rows;
                         resultTable += "</table></center>";
 
                         document.getElementById("results").innerHTML = resultTable;
