--- a/bob-js-client/query.html
+++ b/bob-js-client/query.html
@@ -63,7 +63,7 @@
                         var resultTable = "";
                         //resultTable += "<center><table><tr><th>Beacon</th><th>Result</th></tr>";
                         resultTable += "<center><table>";
-                        
+
                         var rows = "";
 
                         for (var i = 0; i < arrayLength; i++) {
@@ -85,20 +85,24 @@
                                 aggString = " [aggregator]";
                             }
 
-							if (obj[i].beacon.name == "Beacon of Beacons") {
-								var line = "<tr style=\"padding-bottom: 10em;\"><td>" + responseIndicator + "</td><td><b>" + obj[i].beacon.name + " (" + obj[i].beacon.organization + ")</b></td></tr>";							
-								rows = line + rows; // prepend
-							} else {
-								var line = "<tr><td>" + responseIndicator + "</td><td>" + obj[i].beacon.name + " (" + obj[i].beacon.organization + ")" + aggString + "</td></tr>";
-								rows += line; // append
-							}
+                            if (obj[i].beacon.name == "Beacon of Beacons") {
+                                var line = "<tr style=\"padding-bottom: 10em;\"><td>" + responseIndicator + "</td><td><b>" + obj[i].beacon.name + " (" + obj[i].beacon.organization + ")</b></td></tr>";
+                                rows = line + rows; // prepend
+                            } else {
+                                var line = "<tr><td>" + responseIndicator + "</td><td>" + obj[i].beacon.name + " (" + obj[i].beacon.organization + ")" + aggString + "</td></tr>";
+                                rows += line; // append
+                            }
                         }
-                        
+
                         resultTable += rows;
                         resultTable += "</table></center>";
 
                         document.getElementById("results").innerHTML = resultTable;
                     }
+                };
+
+                xmlhttp.ontimeout = function () {
+                    document.getElementById("results").innerHTML = "Request timed out.";
                 };
 
                 var urlArr = [];
@@ -114,6 +118,7 @@
                 var url = urlArr.join("");
 
                 xmlhttp.open("GET", url, true);
+                xmlhttp.timeout = 60000;
                 xmlhttp.send();
             }
         </script>
