--- a/visit.html
+++ b/visit.html
@@ -36,11 +36,16 @@
             <!-- MAIN CONTENT -->
             <section id="main_content" class="inner">
                 <h2>
-                    <a id="what-is-bob" class="anchor" href="#what-is-bob" aria-hidden="true"><span class="octicon octicon-link"></span></a>What is BoB?</h2>
+                    <a id="see-bob-in-action" class="anchor" href="#see-bob-in-action" aria-hidden="true"><span class="octicon octicon-link"></span></a>See BoB in action</h2>
 
-                <p>Beacon of Beacons project (BoB) provides a unified REST API to publicly available <a href="http://ga4gh.org/#/beacon">GA4GH Beacons</a>. BoB standardizes the way beacons are accessed and aggregates their results, thus addressing one of the missing parts of the Beacon project itself.</p>
-                
-                <p>If you want to know more about the beacon project, visit the <a href="http://ga4gh.org/#/beacon">project website</a>, or watch <a href="project website">this YouTube video</a>.</p>
+                <p>If you want to BoB, check out some of the following links:</p>
+                <ul>
+                    <li>Primary BoB client provided by DNAstack: <a href="http://beacon.dnastack.com/">http://beacon.dnastack.com/</a></li>
+                    <li>Mirror of BoB on the GA4GH website: <a href="http://ga4gh.org/#/beacon/bob">http://ga4gh.org/#/beacon/bob</a></li>
+                    <li>BRCA version of BoB: <a href="http://dnastack.com/ga4gh/bob/brca.html">http://dnastack.com/ga4gh/bob/brca.html</a></li>
+                    <li>REST API provided by DNAstack: <a href="http://beacon-dnastack.rhcloud.com/">http://beacon-dnastack.rhcloud.com/</a></li>
+                </ul>
+
             </section>
         </div>
 
