--- a/contact.html
+++ b/contact.html
@@ -36,11 +36,15 @@
             <!-- MAIN CONTENT -->
             <section id="main_content" class="inner">
                 <h2>
-                    <a id="what-is-bob" class="anchor" href="#what-is-bob" aria-hidden="true"><span class="octicon octicon-link"></span></a>What is BoB?</h2>
+                    <a id="see-bob-in-action" class="anchor" href="#contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact us</h2>
 
-                <p>Beacon of Beacons project (BoB) provides a unified REST API to publicly available <a href="http://ga4gh.org/#/beacon">GA4GH Beacons</a>. BoB standardizes the way beacons are accessed and aggregates their results, thus addressing one of the missing parts of the Beacon project itself.</p>
-                
-                <p>If you want to know more about the beacon project, visit the <a href="http://ga4gh.org/#/beacon">project website</a>, or watch <a href="project website">this YouTube video</a>.</p>
+                <h4>Do you have a question about BoB?</h4>
+                <p><a href="mailto:beacon@dnastack.com?subject=[BoB] Question&body=Hi, I have a question regarding the Beacon of Beacons:">Send us an email</a>.</p>
+                <h4>Have you found a bug?</h4>
+                <p>Make sure <a href="https://github.com/mcupak/beacon-of-beacons/issues">we don't have an issue filed for the same problem</a>. If not, <a href="https://github.com/mcupak/beacon-of-beacons/issues/new">create a new bug report</a>.</p>
+
+                <h4>Do you have an idea for feature we should consider?</h4>
+                <p>Make sure <a href="https://github.com/mcupak/beacon-of-beacons/issues">we don't have a similar feature request already</a>. If not, <a href="https://github.com/mcupak/beacon-of-beacons/issues/new">create a new one</a>.</p>
             </section>
         </div>
 
