--- a/download.html
+++ b/download.html
@@ -36,11 +36,15 @@
             <!-- MAIN CONTENT -->
             <section id="main_content" class="inner">
                 <h2>
-                    <a id="what-is-bob" class="anchor" href="#what-is-bob" aria-hidden="true"><span class="octicon octicon-link"></span></a>What is BoB?</h2>
+                    <a id="see-bob-in-action" class="anchor" href="#download" aria-hidden="true"><span class="octicon octicon-link"></span></a>Download</h2>
 
-                <p>Beacon of Beacons project (BoB) provides a unified REST API to publicly available <a href="http://ga4gh.org/#/beacon">GA4GH Beacons</a>. BoB standardizes the way beacons are accessed and aggregates their results, thus addressing one of the missing parts of the Beacon project itself.</p>
-                
-                <p>If you want to know more about the beacon project, visit the <a href="http://ga4gh.org/#/beacon">project website</a>, or watch <a href="project website">this YouTube video</a>.</p>
+                <p>At this moment, we don't have an official release of BoB. However, feel free to download the sources and <a href="running.html">build it yourself</a>:</p>
+                <ul>
+                    <li><a href="https://github.com/mcupak/beacon-of-beacons/zipball/master">ZIP</a></li>
+                    <li><a href="https://github.com/mcupak/beacon-of-beacons/tarball/master">TAR.GZ</a></li>
+                    <li><a href="https://github.com/mcupak/beacon-of-beacons.git">GIT</a></li>
+                </ul>
+
             </section>
         </div>
 
