--- a/running.html
+++ b/running.html
@@ -36,11 +36,30 @@
             <!-- MAIN CONTENT -->
             <section id="main_content" class="inner">
                 <h2>
-                    <a id="what-is-bob" class="anchor" href="#what-is-bob" aria-hidden="true"><span class="octicon octicon-link"></span></a>What is BoB?</h2>
+                    <a id="system-requirements" class="anchor" href="#system-requirements" aria-hidden="true"><span class="octicon octicon-link"></span></a>System requirements</h2>
 
-                <p>Beacon of Beacons project (BoB) provides a unified REST API to publicly available <a href="http://ga4gh.org/#/beacon">GA4GH Beacons</a>. BoB standardizes the way beacons are accessed and aggregates their results, thus addressing one of the missing parts of the Beacon project itself.</p>
-                
-                <p>If you want to know more about the beacon project, visit the <a href="http://ga4gh.org/#/beacon">project website</a>, or watch <a href="project website">this YouTube video</a>.</p>
+                <p>All you need to build this project is Java 7.0 (Java SDK 1.7) or later, Maven 3.0 or later. Since the project is Java EE based and utilizes some of the advanced features of Java EE 6, an application server with support for Java EE 6 Full profile is needed to deploy the application (e.g. JBoss EAP or WildFly).</p>
+
+                <h2>
+                    <a id="how-to-run-it" class="anchor" href="#how-to-run-it" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to run it</h2>
+
+                <p>Start the JBoss server:</p>
+
+                <pre><code>For Linux:   JBOSS_HOME/bin/standalone.sh
+For Windows: JBOSS_HOME\bin\standalone.bat
+</code></pre>
+
+                <p>Build and deploy the archive:</p>
+
+                <pre><code>mvn clean install jboss-as:deploy
+</code></pre>
+
+                <p>The application should now be running on <a href="http://localhost:8080/beacon-of-beacons">http://localhost:8080/beacon-of-beacons</a>.</p>
+
+                <h2>
+                    <a id="technologies" class="anchor" href="#technologies" aria-hidden="true"><span class="octicon octicon-link"></span></a>Technologies</h2>
+
+                <p>Java EE. CDI, EJB, JAX-RS, JAXB, Bean Validation. Tested with Arquillian/ShrinkWrap.</p>
             </section>
         </div>
 
