fixed link to youtube

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
                 <p>Beacon of Beacons project (BoB) provides a unified REST API to publicly available <a href="http://ga4gh.org/#/beacon">GA4GH Beacons</a>. BoB standardizes the way beacons are accessed and aggregates their results, thus addressing one of the missing parts of the Beacon project itself.</p>
                 
-                <p>If you want to know more about the beacon project, visit the <a href="http://ga4gh.org/#/beacon">project website</a>, or watch <a href="project website">this YouTube video</a>.</p>
+                <p>If you want to know more about the beacon project, visit the <a href="http://ga4gh.org/#/beacon">project website</a>, or watch <a href="http://youtu.be/sNQzAmfi7xI">this YouTube video</a>.</p>
             </section>
         </div>
 
