[fixed #31] updated link to documention in the client

--- a/bob-js-client/src/main/webapp/banner-brca.html
+++ b/bob-js-client/src/main/webapp/banner-brca.html
@@ -8,7 +8,7 @@
 			<a href="http://youtu.be/sNQzAmfi7xI" target="_blank">What's a beacon?</a>&nbsp;&nbsp;
 			<a href="brca.html">Query BRCA BoB</a>&nbsp;&nbsp;
 			<a href="subscribe.html">Subscribe new beacon</a>&nbsp;&nbsp;
-			<a href="https://github.com/mcupak/beacon-of-beacons#beacon-of-beacons" target="_blank">Documentation</a>&nbsp;&nbsp;
+			<a href="http://mcupak.github.io/beacon-of-beacons" target="_blank">Documentation</a>&nbsp;&nbsp;
 			<a href="https://github.com/mcupak/beacon-of-beacons" target="_blank">Source code</a>&nbsp;&nbsp;
 			<a href="mailto:beacon@dnastack.com?subject=Beacon of Beacons Feedback">Feedback</a>
 		</center>
