[fixed #30] renamed alt to allele

--- a/bob-js-client/src/main/webapp/brca-query.html
+++ b/bob-js-client/src/main/webapp/brca-query.html
@@ -165,7 +165,7 @@
             }
 
             if (isNull(alt)) {
-                writeInvalid("alternate");
+                writeInvalid("allele");
                 failed = true;
             }
 
