--- a/bob-js-client/src/main/webapp/index.html
+++ b/bob-js-client/src/main/webapp/index.html
@@ -133,7 +133,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="alt" class="control-label col-xs-3">Alt</label>
+                            <label for="alt" class="control-label col-xs-3">Allele</label>
                             <div class="col-xs-9">
                                 <input type="text" class="form-control" name="alt" placeholder="">
                             </div>
