--- a/bob-js-client/src/main/webapp/query.html
+++ b/bob-js-client/src/main/webapp/query.html
@@ -166,7 +166,7 @@
             }
 
             if (isNull(alt)) {
-                writeInvalid("alternate");
+                writeInvalid("allele");
                 failed = true;
             }
 
