[fixed #29] added google analytics to the client

--- a/bob-js-client/src/main/webapp/banner.html
+++ b/bob-js-client/src/main/webapp/banner.html
@@ -7,6 +7,7 @@
         <center>
             <a href="http://youtu.be/sNQzAmfi7xI" target="_blank">What's a beacon?</a>&nbsp;&nbsp;
             <a href="index.html">Query BoB</a>&nbsp;&nbsp;
+            <a href="map.html">Beacon Map</a>&nbsp;&nbsp;
             <a href="subscribe.html">Subscribe new beacon</a>&nbsp;&nbsp;
             <a href="http://mcupak.github.io/beacon-of-beacons" target="_blank">Documentation</a>&nbsp;&nbsp;
             <a href="https://github.com/mcupak/beacon-of-beacons" target="_blank">Source code</a>&nbsp;&nbsp;
