--- a/bob-js-client/src/main/webapp/brca-query.html
+++ b/bob-js-client/src/main/webapp/brca-query.html
@@ -23,6 +23,7 @@
         <script>
             $(function () {
                 $("#banner").load("banner-brca.html");
+                $("#footer").load("footer.html");
             });
         </script>
     </head>
@@ -139,6 +140,7 @@
                 </div>
             </div>
         </div>
+        <div id="footer"></div>
 
         <script>
             var beacon = getParameterByName("beacon");
@@ -191,25 +193,6 @@
                 queryBeacon(beacon, chrom, pos, alt, ref);
                 document.getElementById("results").innerHTML = "<center><img height='30' src='img/wait.gif'</center>";
             }
-        </script>
-
-        <script>
-            (function (i, s, o, g, r, a, m) {
-                i['GoogleAnalyticsObject'] = r;
-                i[r] = i[r] ||
-                        function () {
-                            (i[r].q = i[r].q || []).push(arguments)
-                        }, i[r].l = 1 * new Date();
-                a = s.createElement(o), m = s.getElementsByTagName(o)[0];
-                a.async = 1;
-                a.src = g;
-                m.parentNode.insertBefore(a, m)
-            })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-
-            ga('create', 'UA-52918106-1', 'auto');
-            ga('require', 'displayfeatures');
-            ga('send', 'pageview');
-
         </script>
     </body>
 </html>
