--- a/bob-js-client/src/main/webapp/subscribe.html
+++ b/bob-js-client/src/main/webapp/subscribe.html
@@ -22,10 +22,11 @@
         <!-- Include all compiled plugins (below), or include individual files as needed -->
         <script src="js/bootstrap.min.js"></script>
         <script>
-			$(function() {
-				$("#banner").load("banner.html");
-			});
-		</script>
+            $(function () {
+                $("#banner").load("banner.html");
+                $("#footer").load("footer.html");
+            });
+        </script>
     </head>
     <body>
         <script>
@@ -48,22 +49,6 @@
             </div>
         </div>
 
-        <script>
-            (function (i, s, o, g, r, a, m) {
-                i['GoogleAnalyticsObject'] = r;
-                i[r] = i[r] ||
-                        function () {
-                            (i[r].q = i[r].q || []).push(arguments)
-                        }, i[r].l = 1 * new Date();
-                a = s.createElement(o), m = s.getElementsByTagName(o)[0];
-                a.async = 1;
-                a.src = g;
-                m.parentNode.insertBefore(a, m)
-            })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-
-            ga('create', 'UA-52918106-1', 'auto');
-            ga('require', 'displayfeatures');
-            ga('send', 'pageview');
-        </script>
+        <div id="footer"></div>
     </body>
 </html>
