[fixed #40] [#10] updated client, removed PHP dependencies

--- a/bob-js-client/src/main/webapp/banner-brca.html
+++ b/bob-js-client/src/main/webapp/banner-brca.html
@@ -1,17 +1,7 @@
-<center style="margin-bottom: 40px">
-    <!--<a href="index.html"><img src="img/beacon.png" height="150" onmouseover="this.src='img/beacon-blue.png'" onmouseout="img/beacon.png"/></a>-->
-    <a href="index.html"><img src="img/beacon.png" height="150" border="0"/></a>
-    <h4 style="margin-bottom: 0px">Global Alliance for Genomics and Health</h4>
-    <h3 style="margin-top: 2px">BRCA Beacon of Beacons</h3>
-    <div style="font-size: 11px;">
-        <center>
-            <a href="http://youtu.be/sNQzAmfi7xI" target="_blank">What's a beacon?</a>&nbsp;&nbsp;
-            <a href="brca.html">Query BRCA BoB</a>&nbsp;&nbsp;
-            <a href="map.html">Beacon Map</a>&nbsp;&nbsp;
-            <a href="subscribe.html">Subscribe new beacon</a>&nbsp;&nbsp;
-            <a href="http://mcupak.github.io/beacon-of-beacons" target="_blank">Documentation</a>&nbsp;&nbsp;
-            <a href="https://github.com/mcupak/beacon-of-beacons" target="_blank">Source code</a>&nbsp;&nbsp;
-            <a href="mailto:beacon@dnastack.com?subject=Beacon of Beacons Feedback">Feedback</a>
-        </center>
-    </div>
-</center>
+<div class="banner">
+    <center>
+        <a href="brca.html"><img src="img/beacon.png" height="150" border="0"/></a>
+        <h4 style="margin-bottom: 0px">Global Alliance for Genomics and Health</h4>
+        <h3 style="margin-top: 2px">BRCA Beacon of Beacons</h3>
+    </center>
+</div>
