--- a/bob-js-client/src/main/webapp/brca-query.html
+++ b/bob-js-client/src/main/webapp/brca-query.html
@@ -6,128 +6,26 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Global Alliance for Genomics and Health - BRCA Beacon of Beacons</title>
 
-        <!-- Bootstrap -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="css/custom.css" rel="stylesheet">
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
-        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-        <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-        <![endif]-->
-
-        <!-- Include all compiled plugins (below), or include individual files as needed -->
+        <script src="js/jquery-1.11.2.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
+        <script src="js/bootstrap-switch.min.js"></script>
+        <script src="js/bob-api.js"></script>
         <script>
             $(function () {
+                $("#menu").load("menu-brca.html");
                 $("#banner").load("banner-brca.html");
                 $("#footer").load("footer.html");
             });
         </script>
     </head>
     <body>
-        <script>
-            function getParameterByName(name) {
-                name = name.replace(/[\[]/, "\\[").replace(/[\]]/, "\\]");
-                var regex = new RegExp("[\\?&]" + name + "=([^&#]*)"), results = regex.exec(location.search);
-                return results == null ? "" : decodeURIComponent(results[1].replace(/\+/g, " "));
-            }
-
-            function isNull(value) {
-                if (value == null || value === "") {
-                    return true;
-                }
-                return false;
-            }
-
-            function writeInvalid(name) {
-                var div = document.getElementById("params");
-                var newHTML = div.innerHTML + "<div class=\"alert alert-danger\" role=\"alert\">Invalid " + name + "</div>";
-                div.innerHTML = newHTML;
-            }
-
-            function queryBeacon(beacon, chrom, pos, alt, ref) {
-                var xmlhttp;
-                if (window.XMLHttpRequest) {// code for IE7+, Firefox, Chrome, Opera, Safari
-                    xmlhttp = new XMLHttpRequest();
-                } else {// code for IE6, IE5
-                    xmlhttp = new ActiveXObject("Microsoft.XMLHTTP");
-                }
-                xmlhttp.onreadystatechange = function () {
-
-                    if (xmlhttp.readyState == 4 && xmlhttp.status == 200) {
-
-                        obj = JSON.parse(xmlhttp.responseText);
-                        var arrayLength = obj.length;
-                        var resultTable = "";
-                        resultTable += "<center><table>";
-
-                        var rows = "";
-
-                        for (var i = 0; i < arrayLength; i++) {
-                            var response = obj[i].response;
-                            var responseIndicator = "";
-
-                            if (response == null) {
-                                responseIndicator = "<span title='There was a problem obtaining the response for this beacon.' class='label label-warning'>&#x2005;&#x2005;&#x2005;&#x2005;</span>";
-                            } else if (response == true) {
-                                responseIndicator = "<span class='label label-success'>Yes</span>";
-                            } else {
-                                responseIndicator = "<span class='label label-danger'>No</span>";
-                            }
-
-                            var aggField = obj[i].beacon.aggregator;
-                            var aggString = "";
-
-                            if (aggField != null && aggField == true) {
-                                aggString = " [aggregator]";
-                            }
-
-                            if (obj[i].beacon.name == "Beacon of Beacons") {
-                                var line = "<tr style=\"padding-bottom: 10em;\"><td>" + responseIndicator + "</td><td><b>" + obj[i].beacon.name + " (" + obj[i].beacon.organization + ")</b></td></tr>";
-                                rows = line + rows; // prepend
-                            } else {
-                                var line = "<tr><td>" + responseIndicator + "</td><td>" + obj[i].beacon.name + " (" + obj[i].beacon.organization + ")" + aggString + "</td></tr>";
-                                rows += line; // append
-                            }
-                        }
-
-                        resultTable += rows;
-                        resultTable += "</table></center>";
-
-                        document.getElementById("results").innerHTML = resultTable;
-                    }
-                };
-
-                xmlhttp.ontimeout = function () {
-                    document.getElementById("results").innerHTML = "Request timed out.";
-                };
-
-                var urlArr = [];
-                urlArr.push("http://dnastack.com/ga4gh/bob/api-responses.php?",
-                        "chrom=" + chrom, "&pos=" + pos, "&allele=" + alt);
-
-                if (beacon != "all") {
-                    urlArr.push("&beacon=" + beacon);
-                }
-                if (ref != "all") {
-                    urlArr.push("&ref=" + ref);
-                }
-                var url = urlArr.join("");
-
-                xmlhttp.open("GET", url, true);
-                xmlhttp.timeout = 60000;
-                xmlhttp.send();
-            }
-        </script>
-
+        <div id="menu"></div>
         <div class="container">
             <div class="row row-centered">
-
                 <div id="banner"></div>
-
             </div>
             <div class="row row-centered">
                 <div class="col-xs-6 col-centered">
@@ -143,56 +41,7 @@
         <div id="footer"></div>
 
         <script>
-            var beacon = getParameterByName("beacon");
-            var chrom = getParameterByName("chrom");
-            var pos = getParameterByName("pos");
-            var alt = getParameterByName("alt");
-            var ref = getParameterByName("ref");
-
-            var failed = false;
-
-            if (isNull(beacon)) {
-                writeInvalid("beacon");
-                failed = true;
-            }
-
-            if (isNull(chrom)) {
-                writeInvalid("chromosome");
-                failed = true;
-            }
-
-            if (isNull(pos)) {
-                writeInvalid("position");
-                failed = true;
-            }
-
-            if (isNull(alt)) {
-                writeInvalid("allele");
-                failed = true;
-            }
-
-            if (isNull(ref)) {
-                writeInvalid("genome");
-                failed = true;
-            }
-
-            if (!failed) {
-
-                var paramArr = [];
-                paramArr.push(
-                        "<center><div>",
-                        "<span class='label label-primary'>Beacon: " + beacon + "</span> ",
-                        "<span class='label label-success'>Chromosome: " + chrom + "</span> ",
-                        "<span class='label label-warning'>Position: " + pos + "</span> ",
-                        "<span class='label label-danger'>Allele: " + alt + "</span> ",
-                        "<span class='label label-info'>Genome: " + ref + "</span>",
-                        "</div></center>");
-                var paramString = paramArr.join("");
-
-                document.getElementById("params").innerHTML = paramString;
-                queryBeacon(beacon, chrom, pos, alt, ref);
-                document.getElementById("results").innerHTML = "<center><img height='30' src='img/wait.gif'</center>";
-            }
+            printResponses();
         </script>
     </body>
 </html>
