--- a/bob-js-client/src/main/webapp/map.html
+++ b/bob-js-client/src/main/webapp/map.html
@@ -6,33 +6,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Global Alliance for Genomics and Health - Beacon of Beacons</title>
 
-        <!-- Bootstrap -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="css/custom.css" rel="stylesheet">
 
-        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-        <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-        <![endif]-->
-
-        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-        <script src="js/jquery-1.11.1.min.js"></script>
+        <script src="js/jquery-1.11.2.min.js"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
         <script src="js/bootstrap.min.js"></script>
         <script src="js/bootstrap-switch.min.js"></script>
-        <script>
-            $(function () {
-                $("#banner").load("banner.html");
-                $("#footer").load("footer.html");
-            });
-        </script>
+        <script src="js/bob-api.js"></script>
+        <script src="js/layout.js"></script>
     </head>
     <body>
-        <script>
-            getBeacons();
-        </script>
+        <div id="menu"></div>
         <div class="container">
             <div class="row row-centered">
                 <div id="banner"></div>
