--- a/bob-js-client/src/main/webapp/subscribe.html
+++ b/bob-js-client/src/main/webapp/subscribe.html
@@ -6,38 +6,25 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Global Alliance for Genomics and Health - Beacon of Beacons</title>
 
-        <!-- Bootstrap -->
+        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="css/custom.css" rel="stylesheet">
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="css/custom.css" rel="stylesheet">
 
-        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-        <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-        <![endif]-->
-
-        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-        <!-- Include all compiled plugins (below), or include individual files as needed -->
+        <script src="js/jquery-1.11.2.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
-        <script>
-            $(function () {
-                $("#banner").load("banner.html");
-                $("#footer").load("footer.html");
-            });
-        </script>
+        <script src="js/bootstrap-switch.min.js"></script>
+        <script src="js/bob-api.js"></script>
+        <script src="js/layout.js"></script>
     </head>
     <body>
-        <script>
-            getBeacons();
-        </script>
+        <div id="menu"></div>
         <div class="container">
             <div class="row row-centered">
                 <div id="banner"></div>
             </div>
             <div class="center narrow">
-                <h4>Subscribe a new beacon</h4>
+                <h4>Register a new beacon</h4>
                 <p>If you know of a beacon which is not integrated in our system yet, please <a href="mailto:beacon@dnastack.com?subject=[BoB] New beacon request&body=Hi, there is a beacon I would like you to add to the Beacon of Beacons. Its URL and API are described below.">send us an email</a> and include the beacon's URL and API details.</p>
                 <p>Beacon of Beacons also supports anonymous beacons. If you have multiple projects exposed as beacons and want to hide their identity, we can aggregate their responses under a beacon with a different name. Please specify this in your request.</p>
                 <p>If you have administrative control over your beacon, please make sure it supports the following API:</p>
