added broad institute to the beacon map

--- a/bob-js-client/src/main/webapp/map.html
+++ b/bob-js-client/src/main/webapp/map.html
@@ -47,7 +47,8 @@
                     ['Cambridgeshire CB10 1SD, United Kingdom', 'European Bioinformatics Institute', 1],
                     ['332 Congress Street 4th Floor Boston, MA 02210', 'Curoverse', 2],
                     ['401 Terry Avenue North Seattle, WA', 'Institute for Systems Biology', 1],
-                    [' 8600 Rockville Pike, Bethesda MD, 20894 USA', 'National Center for Biotechnology Information', 1],
+                    ['8600 Rockville Pike, Bethesda MD, 20894 USA', 'National Center for Biotechnology Information', 1],
+                    ['415 Main Street, Cambridge, MA 02142, United States', 'Broad Institute', 1],
                     ['Hinxton, Cambridgeshire CB10 1SA, United Kingdom', 'Wellcome Trust Sanger Institute', 1]
                 ]);
 
