using OICR as institution for ICGC

--- a/bob-js-client/src/main/webapp/map.html
+++ b/bob-js-client/src/main/webapp/map.html
@@ -49,6 +49,7 @@
                     ['401 Terry Avenue North Seattle, WA', 'Institute for Systems Biology', 1],
                     ['8600 Rockville Pike, Bethesda MD, 20894 USA', 'National Center for Biotechnology Information', 1],
                     ['415 Main Street, Cambridge, MA 02142, United States', 'Broad Institute', 1],
+                    ['661 University Avenue, Suite 510, Toronto, Ontario, Canada, M5G 0A3', 'Ontario Institute for Cancer Research', 1],
                     ['Hinxton, Cambridgeshire CB10 1SA, United Kingdom', 'Wellcome Trust Sanger Institute', 1]
                 ]);
 
