--- a/bob-js-client/src/main/webapp/menu.html
+++ b/bob-js-client/src/main/webapp/menu.html
@@ -3,6 +3,7 @@
         <li><a href="index.html">Query</a></li>
         <li><a href="map.html">Beacon map</a></li>
         <li><a href="subscribe.html">Register beacon</a></li>
+        <li><a href="generate-snippet.html" target="_blank">Generate snippet</a></li>
         <li><a href="http://mcupak.github.io/beacon-of-beacons" target="_blank">Documentation</a></li>
         <li><a href="https://github.com/mcupak/beacon-of-beacons" target="_blank">Source code</a></li>
         <li><a href="mailto:beacon@dnastack.com?subject=Beacon of Beacons Feedback">Feedback</a></li>
